
namespace EverScord
{
    public static class ConstStrings
    {
        // Animation
        public const string ANIMATION_NED_SHOOT = "Ned_Shoot";
        public const string ANIMATION_NED_SHOOTEND = "Ned_ShootEnd";

        // Animator Parameters
        public const string PARAM_ISMOVING = "isMoving";
        public const string PARAM_ISROTATING = "isRotating";
        public const string PARAM_HORIZONTAL = "Horizontal";
        public const string PARAM_VERTICAL = "Vertical";

        // Input GetAxis
        public const string INPUT_HORIZONTAL = "Horizontal";
        public const string INPUT_VERTICAL = "Vertical"; 

    }
}